{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 158,
  "lineage": "0dd699db-205e-2d58-d840-defdd15cebc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dockerzon-ecs-vpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-059a4f9c4f6f32858",
            "owner_id": "216659404274",
            "tags": {
              "Name": "dockerzon-ecs-vpc-igw"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dockerzon-ecs-vpc-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017f4e72687344f8d",
            "owner_id": "216659404274",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059a4f9c4f6f32858",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059a4f9c4f6f32858",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dockerzon-ecs-vpc-public-route"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2a-route-link",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786bc010b75ce7cc",
            "route_table_id": "rtb-017f4e72687344f8d",
            "subnet_id": "subnet-029de357c4c20931f"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_route_table.dockerzon-ecs-vpc-public-route",
            "aws_subnet.public-subnet-2a",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2b-route-link",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a92a272d3c87739",
            "route_table_id": "rtb-017f4e72687344f8d",
            "subnet_id": "subnet-0a56837ac1b74fd52"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_route_table.dockerzon-ecs-vpc-public-route",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-0aa281b289e88b9c3",
            "description": "Flow traffic to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa281b289e88b9c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-instance-sg-terraform",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-instance-sg-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dockerzon-lb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-0be742bc466dd7184",
            "description": "Dockerzon load balancer security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0aa281b289e88b9c3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be742bc466dd7184",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dockerzon-lb-sg",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dockerzon-lb-sg-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dockerzon-vpc-endpoint-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-03415240338ffb3c2",
            "description": "Dockerzon vpc endpoint security group",
            "egress": [],
            "id": "sg-03415240338ffb3c2",
            "ingress": [],
            "name": "dockerzon-vpc-endpoint-sg",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dockerzon-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-inbound-traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1118959744",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0be742bc466dd7184",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dockerzon-lb-sg",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-inbound-traffic-from-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2389322287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aa281b289e88b9c3",
            "self": false,
            "source_security_group_id": "sg-0be742bc466dd7184",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app-instance-sg",
            "aws_security_group.dockerzon-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-inbound-traffic-from-private-instances",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-415406324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03415240338ffb3c2",
            "self": false,
            "source_security_group_id": "sg-0aa281b289e88b9c3",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app-instance-sg",
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outbound-traffic-off-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-584190233",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aa281b289e88b9c3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app-instance-sg",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outbound-traffic-to-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-494418517",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0be742bc466dd7184",
            "self": false,
            "source_security_group_id": "sg-0aa281b289e88b9c3",
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app-instance-sg",
            "aws_security_group.dockerzon-lb-sg",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-from-anywhere",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1607644957",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa281b289e88b9c3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app-instance-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-0aca70665069b0991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0aca70665069b0991",
            "map_public_ip_on_launch": false,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.5.0/ap-southeast-2a/private"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-0faec041e5e22498c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0faec041e5e22498c",
            "map_public_ip_on_launch": false,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.4.0/ap-southeast-2b/private"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-029de357c4c20931f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-029de357c4c20931f",
            "map_public_ip_on_launch": true,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.1.0/ap-southeast-2a/public"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-0a56837ac1b74fd52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a56837ac1b74fd52",
            "map_public_ip_on_launch": true,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.3.0/ap-southeast-2b/public"
            },
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dockerzon-ecs-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:vpc/vpc-04e0233d2c5f5bf83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ce6a2a67829d78f",
            "default_route_table_id": "rtb-0e5b2899ebd2a2bf8",
            "default_security_group_id": "sg-024e7f819a0067d8b",
            "dhcp_options_id": "dopt-77e7ba10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e0233d2c5f5bf83",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5b2899ebd2a2bf8",
            "owner_id": "216659404274",
            "tags": {
              "Name": "dockerzon-ecs-vpc",
              "app": "dockerzon-ecs",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-05a080dde616069d4-gsyq6zrl.api.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-05a080dde616069d4-gsyq6zrl-ap-southeast-2b.api.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-05a080dde616069d4-gsyq6zrl-ap-southeast-2a.api.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "api.ecr.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z02279793MXPKJX8D6CHY"
              }
            ],
            "id": "vpce-05a080dde616069d4",
            "network_interface_ids": [
              "eni-0770e4a1403a3c599",
              "eni-0c57a1dc06d1d536f"
            ],
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03415240338ffb3c2"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0aca70665069b0991",
              "subnet-0faec041e5e22498c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-dkr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-022e586258d793592-xoo4fhyt.dkr.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-022e586258d793592-xoo4fhyt-ap-southeast-2b.dkr.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-022e586258d793592-xoo4fhyt-ap-southeast-2a.dkr.ecr.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z0228093152P7FMN4L21F"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z0228093152P7FMN4L21F"
              }
            ],
            "id": "vpce-022e586258d793592",
            "network_interface_ids": [
              "eni-03e63f532be5ee673",
              "eni-0cc9d2c6037590ef5"
            ],
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03415240338ffb3c2"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0aca70665069b0991",
              "subnet-0faec041e5e22498c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.248.0/22",
              "52.95.128.0/21"
            ],
            "id": "vpce-076d675d745537090",
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-017f4e72687344f8d",
              "rtb-0e5b2899ebd2a2bf8"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "tags": {
              "name": "ecr-s3 endpoint gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_route_table.dockerzon-ecs-vpc-public-route",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0196aa8b146aeda21-0y3ntrnv.ecs.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0196aa8b146aeda21-0y3ntrnv-ap-southeast-2b.ecs.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0196aa8b146aeda21-0y3ntrnv-ap-southeast-2a.ecs.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "ecs.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z02280463B2205B4UR5RP"
              }
            ],
            "id": "vpce-0196aa8b146aeda21",
            "network_interface_ids": [
              "eni-007c347ead5805fba",
              "eni-09ec21dc9c43e4cc4"
            ],
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03415240338ffb3c2"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-0aca70665069b0991",
              "subnet-0faec041e5e22498c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs-agent",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-01c57030c4091f472-s8ieydq6.ecs-a.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-01c57030c4091f472-s8ieydq6-ap-southeast-2b.ecs-a.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-01c57030c4091f472-s8ieydq6-ap-southeast-2a.ecs-a.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "ecs-a.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z0227912G0IQPQYBJE5E"
              }
            ],
            "id": "vpce-01c57030c4091f472",
            "network_interface_ids": [
              "eni-03f44385d08c3974a",
              "eni-067238f280fa0f188"
            ],
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03415240338ffb3c2"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.ecs-agent",
            "state": "available",
            "subnet_ids": [
              "subnet-0aca70665069b0991",
              "subnet-0faec041e5e22498c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs-telemetry",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0f3dda7c431ed203e-7e5ms810.ecs-t.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0f3dda7c431ed203e-7e5ms810-ap-southeast-2b.ecs-t.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0f3dda7c431ed203e-7e5ms810-ap-southeast-2a.ecs-t.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "ecs-t.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z02279723AOABCFSCS34Y"
              }
            ],
            "id": "vpce-0f3dda7c431ed203e",
            "network_interface_ids": [
              "eni-07b080bcd73530be4",
              "eni-0874db39f2a92a94c"
            ],
            "owner_id": "216659404274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03415240338ffb3c2"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.ecs-telemetry",
            "state": "available",
            "subnet_ids": [
              "subnet-0aca70665069b0991",
              "subnet-0faec041e5e22498c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e0233d2c5f5bf83"
          },
          "dependencies": [
            "aws_security_group.dockerzon-vpc-endpoint-sg",
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    }
  ]
}